chore(issuer): sidebar now shift header/footer accordingly

--- a/packages/polymath-ui/src/components/Sidebar/style.scss
+++ b/packages/polymath-ui/src/components/Sidebar/style.scss
@@ -4,7 +4,6 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 20;
   width: 64px;
   height: 100%;
   padding-top: $navbar-height;
